// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator Stateful 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator hideLabels and default stepWidth 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--complete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Complete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <polygon
              points="14 21.5 9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator presentation 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator presentation vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress bx--progress--vertical iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 fvWusc"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fdqlBz"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator skeleton 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress bx--skeleton"
    >
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
